--- a/package.xml
+++ b/package.xml
@@ -42,5 +42,7 @@
   <build_export_depend>dynamic_reconfigure</build_export_depend>
   <build_export_depend>message_runtime</build_export_depend>
   <build_export_depend>eigen</build_export_depend>
+  
+  <depend>angles</depend>
 
 </package>
