--- a/package.xml
+++ b/package.xml
@@ -20,6 +20,7 @@
   <build_depend>dynamic_reconfigure</build_depend>
   <build_depend>message_generation</build_depend>
   <build_depend>occupancy_grid_extractor</build_depend>
+  <build_depend>angles</build_depend>
  
   <exec_depend>roscpp</exec_depend>
   <exec_depend>rospy</exec_depend>
@@ -33,6 +34,7 @@
   <exec_depend>eigen</exec_depend>
   <exec_depend>angles</exec_depend>
   <exec_depend>occupancy_grid_extractor</exec_depend>
+  <exec_depend>angles</exec_depend>
 
   <build_export_depend>roscpp</build_export_depend>
   <build_export_depend>rospy</build_export_depend>
@@ -44,5 +46,6 @@
   <build_export_depend>dynamic_reconfigure</build_export_depend>
   <build_export_depend>message_runtime</build_export_depend>
   <build_export_depend>eigen</build_export_depend>
+  <build_export_depend>angles</build_export_depend>
   
 </package>
